cluster/apps/monitoring-system/grafana/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app grafana
  labels:
    app.kubernetes.io/name: *app
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  serviceName: *app
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsUser: 472
        supplementalGroups:
          - 0
      containers:
        - name: *app
          image: grafana/grafana-oss
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2048Mi
              cpu: 500m
            requests:
              memory: 750Mi
              cpu: 250m
          volumeMounts:
            - name: grafana-config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: grafana-data
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-plugins
              mountPath: /etc/grafana/provisioning/plugins
            - name: grafana-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-plugins
          configMap:
            name: grafana-plugins
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards
