cluster/apps/monitoring-system/grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app grafana
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: *app
