cluster/apps/monitoring-system/grafana/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`grafana.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls: {}
